[build-system]
requires = ['setuptools>=43', 'wheel', 'setuptools_scm==5.0.*']

[tool.black]
target-version = ['py36']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
