[metadata]
name = robotpy-sphinx-plugin
description = Common Sphinx tooling for RobotPy projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Dustin Spicuzza
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-sphinx-plugin
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    setuptools >= 43
    setuptools_scm >= 6
    sphinx-autodoc-typehints
    sphinx-automodapi
    toml
setup_requires =
    setuptools_scm
python_requires = >=3.6
